# setup

./: .bashrc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .tool-versions  .yamllint  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.test  README.md  bashrc  bashrc_ext  bootstrap.sh  default-cargo-crates  docker-compose.test.yml  env_vars.sh  gitconfig  install.sh  justfile  setup.sh  tool-versions
.claude/commands/: drift-review.md
bootstrap/: main.sh  manifest.toml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/commands/: check.rs  doctor.rs  dotfiles.rs  drift.rs  install.rs  interactive.rs  list.rs  mod.rs  profile.rs  uninstall.rs  update.rs
cli/src/components/: apt.rs  backup.rs  bottom.rs  chromium.rs  claude_code.rs  discord.rs  docker.rs  gh.rs  ghostty.rs  glow.rs  gpg.rs  hyperfine.rs  jq.rs  just.rs  lazygit.rs  mise.rs  mod.rs  monitoring.rs  neovim.rs  obsidian.rs  registry.rs  spotify.rs  ssh_keys.rs  tldr.rs  tools.rs  tpm.rs  util.rs  vlc.rs  yq.rs
cli/src/config/: dotfiles.rs  mod.rs  settings.rs
cli/src/manifest/: intent.rs  loader.rs  mod.rs  resolver.rs  schema.rs
cli/src/system/: health.rs  mod.rs  packages.rs
cli/src/ui/: prompts.rs
cli/tests/: contract.rs
docs/: GHOSTTY.md  TMUX.md  TOOLS.md
dotfiles/: aliases  bash_profile  bashrc  exports  functions  linux  mac  system  tmux.conf  tool-versions  util
extensions/: bashrc_ext  bootstrap_ext.sh
hooks/: commit-msg
notes/: beelink_unbuntu.md
plans/: 2026-04-18-manifest-architecture-design.md  2026-04-18-manifest-architecture-plan.md
(+37 files in other folders)
