[package]
name = "setup"
version = "0.1.0"
edition = "2021"
authors = ["Al McKay <aldmckay@gmail.com>"]
description = "Personal development environment setup CLI"
license = "MIT"

[lib]
name = "setup"
path = "src/lib.rs"

[[bin]]
name = "setup"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# Interactive prompts
inquire = "0.7"

# Colored output
console = "0.15"
indicatif = "0.17"

# Config file handling
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# System interaction
which = "7"
dirs = "6"
shellexpand = "3"
chrono = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
